Bug 38578 - fatal warning during bootstrap on arm.c for output_move_double and arm_expand_prologue
Summary: fatal warning during bootstrap on arm.c for output_move_double and arm_expand...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Richard Earnshaw
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2008-12-19 10:19 UTC by Laurent GUERBY
Modified: 2008-12-19 17:25 UTC (History)
2 users (show)

See Also:
Host: arm-linux-gnueabi
Target: arm-linux-gnueabi
Build: arm-linux-gnueabi
Known to work:
Known to fail:
Last reconfirmed: 2008-12-19 10:22:59


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent GUERBY 2008-12-19 10:19:47 UTC
At rev 142808 on trunk:

../trunk/configure --prefix=/n/50/guerby/install-trunk-142808 --enable-languages=c,c++ --enable-__cxa_atexit --disable-nls --enable-threads=posix --with-mpfr=/opt/cfarm/mpfr-2.3.2 --build=arm-linux-gnueabi --host=arm-linux-gnueabi --target=arm-linux-gnueabi
...
make boostrap
...

/home/guerby/build/./prev-gcc/xgcc -B/home/guerby/build/./prev-gcc/ -B/n/50/guerby/install-trunk-142808/arm-linux-gnueabi/bin/ -c  -g -O2 -DIN_GCC   -W -Wall -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wcast-qual -Wold-style-definition -Wc++-compat -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -fno-common  -DHAVE_CONFIG_H -I. -I. -I../../trunk/gcc -I../../trunk/gcc/. -I../../trunk/gcc/../include -I../../trunk/gcc/../libcpp/include -I/opt/cfarm/mpfr-2.3.2/include -I../../trunk/gcc/../libdecnumber -I../../trunk/gcc/../libdecnumber/dpd -I../libdecnumber    \
		../../trunk/gcc/config/arm/arm.c -o arm.o
cc1: warnings being treated as errors
../../trunk/gcc/config/arm/arm.c: In function 'output_move_double':
../../trunk/gcc/config/arm/arm.c:9999: error: comparison between signed and unsigned integer expressions
../../trunk/gcc/config/arm/arm.c:10149: error: comparison between signed and unsigned integer expressions
../../trunk/gcc/config/arm/arm.c: In function 'arm_expand_prologue':
../../trunk/gcc/config/arm/arm.c:12659: error: ISO C90 forbids mixed declarations and code
make[3]: *** [arm.o] Error 1
make[3]: *** Waiting for unfinished jobs....
rm fsf-funding.pod gcov.pod gfdl.pod cpp.pod gcc.pod
make[3]: Leaving directory `/home/guerby/build/gcc'
make[2]: *** [all-stage2-gcc] Error 2
make[2]: Leaving directory `/home/guerby/build'
make[1]: *** [stage2-bubble] Error 2
make[1]: Leaving directory `/home/guerby/build'
make: *** [bootstrap] Error 2

I assume --disable-werror will workaround this.
Comment 1 Richard Earnshaw 2008-12-19 10:22:59 UTC
I'm already testing fixes for this, but my native arm board is very sloooowwwwwwww....
Comment 2 Laurent GUERBY 2008-12-19 12:02:01 UTC
Thanks!

The cfarm machine gcc50 has a 600 Mhz XScale-80219 with 512 MB of RAM, gcc-4.3.2 release C only bootstrap took 17 hours (and about the same for make check) - feel free to ask for an account if it's faster than what you have.

If you know a way to purchase qualcomm snapdragon dual core 1.5 GHz arm (or a contact that might lead to it) I'm interested :).

http://www.umpcportal.com/2008/12/analysis-dual-core-snapdragon-and-netbooks-from-qualcomm

Comment 3 Richard Earnshaw 2008-12-19 17:24:22 UTC
Subject: Bug 38578

Author: rearnsha
Date: Fri Dec 19 17:22:58 2008
New Revision: 142837

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142837
Log:
	PR bootstrap/38578
	* arm.c (load_multiple_sequence): Initialize ORDER array.
	(store_multiple_sequence): Likewise.
	(output_move_double): Make reg0 unsigned.
	(arm_output_epilogue): Make amount unsigned.
	(arm_expand_prologue): Move declaration of dwarf before block
	statements.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/arm/arm.c

Comment 4 Richard Earnshaw 2008-12-19 17:25:06 UTC
Fixed